exercises/gatekeeper/gator/required-fields/test-platform-ns-success.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics
  namespace: platform
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
